this modifide and page navbar complate

--- a/fitness2/index.html
+++ b/fitness2/index.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness</title>
+    <!-- css stylesheet -->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <!-- start header section -->
+    <header>
+        <nav class="nav-bar">
+            <div class="logo">
+                <b>Fitness</b>
+            </div>
+            <div class="action">
+                <li>
+                    <a href="#">
+                        Home
+                    </a></li>
+                <li>
+                    <a href="#">
+                        Service
+                    </a></li>
+                <li>
+                    <a href="#">
+                        Contact
+                    </a></li>
+                <li>
+                    <a href="#">
+                        About
+                    </a></li>
+            </div>
+        </nav>
+            <!-- start bannar section -->
+        <div class="bannar">
+            <div class="bannar-left">
+                <img src="./images/Get body in shape & stay healthy.png" alt="">
+                <p>A huge selection of health and fitness content, healthy recipes <br> 
+                    and transformation stories to help you get fit and stay fit!</p>
+                    <div class="button-bannar">
+                        <button class="button button-denger">Join Club Now!</button>
+                        <button class="button button-solid">Download App</button>
+                </div>
+            </div>
+            <div class="bannar-right">
+                <div class="tutorial">
+                    <p class="circle-red">
+
+                    </p>
+                    <div>
+                        <p>350+</p>
+                        <p>Video tutorial</p>
+                    </div>
+                </div>
+                <div class="workout">
+                    <p>500+</p>
+                    <p>Free Workout Video</p>
+                </div>
+            </div>
+        </div>
+    </header>
+        <!-- end header section -->
+    <!-- start main section -->
+    <main>
+
+    </main>
+        <!-- end main section -->
+    <!-- start footer section -->
+    <footer>
+
+    </footer>
+        <!-- end footer section -->
 
     <script src="index.js"></script>
 </body>
