--- a/fitness2/index.html
+++ b/fitness2/index.html
@@ -6,6 +6,8 @@
     <title>Fitness</title>
     <!-- css stylesheet -->
     <link rel="stylesheet" href="index.css">
+    <!-- google icons link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <!-- start header section -->
@@ -45,17 +47,17 @@
                 </div>
             </div>
             <div class="bannar-right">
-                <div class="tutorial">
-                    <p class="circle-red">
-
-                    </p>
+                <div class="tutorial banner-content">
+                    <span class="video-icon material-symbols-outlined">
+                        play_circle
+                        </span>
                     <div>
-                        <p>350+</p>
-                        <p>Video tutorial</p>
+                        <h2>350+</h2>
+                        <p class="banner-video-turorial">Video tutorial</p>
                     </div>
                 </div>
-                <div class="workout">
-                    <p>500+</p>
+                <div class="workout banner-content">
+                    <h2 class="five-hund">500+</h2>
                     <p>Free Workout Video</p>
                 </div>
             </div>
