modified fitness2 file

--- a/fitness2/index.html
+++ b/fitness2/index.html
@@ -52,12 +52,12 @@
                         play_circle
                         </span>
                     <div>
-                        <h2>350+</h2>
+                        <h3>350+</h3>
                         <p class="banner-video-turorial">Video tutorial</p>
                     </div>
                 </div>
                 <div class="workout banner-content">
-                    <h2 class="five-hund">500+</h2>
+                    <h3 class="five-hund">500+</h3>
                     <p>Free Workout Video</p>
                 </div>
             </div>
@@ -66,6 +66,16 @@
         <!-- end header section -->
     <!-- start main section -->
     <main>
+        <div class="highlight-content">
+            <div class="change-habits">
+                <div class="your-habits">
+                    <h2>Change Your Habits</h2>
+                <p>
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+                </p>
+                </div>
+            </div>
+        </div>
 
     </main>
         <!-- end main section -->
